SERVER-37842 host field for idleCursors doesn't include port.